# plu-fast

./: .editorconfig  .gitignore  README.md  index.html  package.json  requirements.txt  setup.cfg  vite.config.ts
plu_app/: class_mapping.py  create_config.py  db.py  main.py  save_schema.py  schema.py  settings.py  version.py
plu_app/graphql/: schema.py
plu_app/routers/: graphql.py  item.py
src/: App.tsx  Plu.tsx  PluGraphql.tsx  item.ts
src/components/: ErrorBoundary.tsx  LabelValue.tsx  PluGraphql.tsx  PluRest.tsx  ValueView.tsx
tests/: test_item.py
