[metadata]
name = PLU Fast
version = file: plu_app/VERSION.txt

[options]
packages = find:
install_requires =
    fastapi
    uvicorn
    pydantic
    pymysql
    cryptography
    python-dotenv
    rich
    strawberry-graphql
    SQLAlchemy>=1.4
    python-multipart
    python-jose
include_package_data = True

[options.package_data]
plu_app =
    VERSION.txt
    public/*
    public/assets/*

[mypy]
plugins = sqlalchemy.ext.mypy.plugin, pydantic.mypy, strawberry.ext.mypy_plugin
